deploy/kubernetes_manifests/product_price/api/deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: product-price-api
  labels:
    target: product-price
    component: api
spec:
  selector:
    matchLabels:
      target: product-price
      component: api
  template:
    metadata:
      name: product-price-api
      labels:
        target: product-price
        component: api
    spec:
      containers:
      - name: product-price-api
        image: "registry.localhost:5000/jrruethe/product_price:latest"
        ports:
        - name: http
          containerPort: 4567
          protocol: TCP
