deploy/kubernetes_manifests/product_price/api/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: product-price-api
  labels:
    target: product-price
    component: api
spec:
  selector:
    target: product-price
    component: api
  ports:
  - name: http
    port: 4567
    protocol: TCP
