deploy/kubernetes_manifests/product_price/api/test_service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: test-product-price-api
  labels:
    target: product-price
    component: api
spec:
  selector:
    target: product-price
    component: api
  type: LoadBalancer
  ports:
  - name: http
    port: 8082
    targetPort: 4567
    protocol: TCP
