deploy/kubernetes_manifests/product_price/api/test_ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: product-price-api
  labels:
    target: product-price
    component: api
spec:
  rules:
  - host: product-price.localhost
    http:
      paths:
      - backend:
          service:
            name: product-price-api
            port: 
              name: http
        path: /
        pathType: Prefix
